Fifth commit - Mobile site operational
Mobile Navbar completed and finishing touches for mobile media query further added.
Further considerations -Implementation of animations.

--- a/Frontend Mentor - Intro with Dropdown/Main/index.html
+++ b/Frontend Mentor - Intro with Dropdown/Main/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
   <img id="logo" src="images/logo.svg" alt="logo image">
+  <div class="transparentGreyContainer"></div>
   <button id="navToggleButton"><img id="toggleButtonImage" src="images/icon-menu.svg" alt="Navigation toggle button"></button>
   <nav class="taskbar">
     <ul class="nav-leftList">
